<resources>
    <string name="app_name">LCO Home Workout</string>
    <string name="choose_sets">Choose Sets</string>
    <string name="push_ups">Push Ups</string>
    <string name="crunches">Cruches</string>
    <string name="bench_press">Bench Press</string>
    <string name="barbell_press">Barbell Press</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="rest">Rest</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="default_time">00:00</string>
    <string name="congrats">Congratulations!</string>
    <string name="finish">Finish</string>
    <string name="choose_cycles">Choose Cycles</string>
    <string name="custom_workout">Custom Workout</string>
    <string name="random_workout">Random Workout</string>
    <string name="day_wise_workout">Day Wise Workout</string>
    <string name="about">About</string>
    <string name="challenge_link_heading">Hitesh Chouhdhary App Challenge</string>
    <string name="challenge_link">https://www.youtube.com/watch?v=VFrKjhcTAzE&amp;t=661s</string>
    <string name="time_consumed_heading">Time Consumed To Build The App</string>
    <string name="time_consumed">2 Weeks</string>
    <string name="price_heading">Price: $80</string>
    <string name="workout_image_description">Workout Image</string>
    <string name="temporary_sets">3x</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
