<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CreatorFragment">

    <ImageView
            android:src="@drawable/github_profile"
            android:layout_width="wrap_content"
            android:layout_height="250dp" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/time_consumed_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/time_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/challenge_link_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/challenge_link"
            android:autoLink="all"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="8dp"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/price_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>