<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content" android:id="@+id/workoutCardItem">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:contentDescription="@string/workout_image_description"
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/crunches" android:id="@+id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                tools:text="@string/push_ups"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/itemTitle"
                app:layout_constraintEnd_toStartOf="@+id/trailing"
                app:layout_constraintStart_toEndOf="@+id/image" app:layout_constraintTop_toTopOf="@+id/image"
                app:layout_constraintBottom_toBottomOf="@+id/image"/>
        <TextView
                android:text="@string/temporary_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/trailing"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/itemTitle"
                app:layout_constraintBottom_toBottomOf="@+id/itemTitle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>