<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".WorkoutFragment" android:id="@+id/frameLayout">
    <ImageView
            android:src="@drawable/push_ups"
            android:layout_width="wrap_content"
            android:layout_height="250dp" android:id="@+id/workoutImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/push_ups"
            app:autoSizeTextType="uniform"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="30dp" android:id="@+id/workoutNameText"
            app:layout_constraintTop_toBottomOf="@+id/workoutImage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/default_time"
            app:autoSizeTextType="uniform"
            android:layout_width="120dp"
            android:layout_height="70dp" android:id="@+id/workoutTimerText"
            app:layout_constraintTop_toBottomOf="@+id/workoutNameText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/workoutTimerText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>