<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ChooseWorkoutTypeFragment" android:id="@+id/frameLayout2">
    <Button
            android:text="@string/custom_workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/customWorkoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/random_workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/randomWorkoutButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customWorkoutButton" android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/day_wise_workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/dayWiseWorkoutButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randomWorkoutButton" android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
    <ImageView
            android:src="@mipmap/ic_lco_logo_foreground"
            android:layout_width="0dp"
            android:layout_height="200dp" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>