<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BuildWorkoutFragment" android:id="@+id/frameLayout">
    <TextView
            android:text="@string/push_ups"
            app:autoSizeTextType="uniform"
            android:layout_width="130dp"
            android:layout_height="25dp" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/crunches"
            app:autoSizeTextType="uniform"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:id="@+id/workoutTimerText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/bench_press"
            app:autoSizeTextType="uniform"
            android:layout_width="130dp"
            android:layout_height="25dp" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/workoutTimerText"/>
    <TextView
            android:text="@string/barbell_press"
            app:autoSizeTextType="uniform"
            android:layout_width="130dp"
            android:layout_height="25dp" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/shoulder_press"
            app:autoSizeTextType="uniform"
            android:layout_width="130dp"
            android:layout_height="25dp" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <Spinner
            tools:listitem="@layout/spinner_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pushUpsSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
    <Spinner
            tools:listitem="@layout/spinner_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cruchesSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/workoutTimerText"
            app:layout_constraintBottom_toBottomOf="@+id/workoutTimerText"/>
    <Spinner
            tools:listitem="@layout/spinner_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/benchPressSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
    <Spinner
            tools:listitem="@layout/spinner_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/barbellCurlSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/textView6" app:layout_constraintBottom_toBottomOf="@+id/textView6"/>
    <Spinner
            tools:listitem="@layout/spinner_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/shoulderPressSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" android:layout_marginTop="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"
            android:id="@+id/radioGroup" android:layout_marginEnd="16dp" android:layout_marginStart="16dp">

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="1"/>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="2"/>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="3"/>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="4"/>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="5"/>

    </RadioGroup>
    <TextView
            android:text="@string/choose_sets"
            android:gravity="center"
            android:textStyle="bold"
            android:height="30dp"
            android:width="180dp"
            app:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/choose_sets"
            android:gravity="center"
            android:textStyle="bold"
            android:height="30dp"
            android:width="180dp"
            app:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>